infrastructure/intel-device-plugin/resources/app/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default-ingress
  namespace: intel-device-plugin
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: intel-device-plugin
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: inteldeviceplugins-controller-manager-ingress
  namespace: intel-device-plugin
spec:
  endpointSelector:
    matchLabels:
      control-plane: controller-manager
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
    - fromEntities:
        - remote-node
      toPorts:
        - ports:
            - port: "9443"
              protocol: TCP
